--- a/Rotfrukt_hemsida/site/public/index.html
+++ b/Rotfrukt_hemsida/site/public/index.html
@@ -57,6 +57,7 @@
 
     
     <div class="artikel3">
+        <div class="bild3"></div>
         <p>Är sötpotatis onyttigt?</p>
     </div>
     
