--- a/Rotfrukt_hemsida/site/public/index.html
+++ b/Rotfrukt_hemsida/site/public/index.html
@@ -63,6 +63,7 @@
     
     
     <div class="artikel4">
+        <div class="bild4"></div>
         <p>Rödbetan den nya rädisan.</p>
     </div>
 
