Lade till en bakgrund till titeln och lade till text och bilder till infosidan

--- a/Rotfrukt_hemsida/site/public/info.html
+++ b/Rotfrukt_hemsida/site/public/info.html
@@ -66,6 +66,15 @@
     <div class="odlingstips">
         <a href="odlingstips.html">Tips</a>
     </div>
+</div>
+
+<div class="text">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut sagittis metus. Etiam non aliquet neque, sit amet elementum risus. Fusce et magna venenatis, accumsan nibh in, suscipit ante. Etiam et lorem gravida, suscipit tellus sed, sodales diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum et mauris iaculis, faucibus neque a, tempor nisl.</p>
+</div>
+
+<div class="bilder">
+    <div class="potatis"></div>
+    <div class="potatisplanta"></div>
 </div>
 
         </main>
