Trimmade texten så att den passade med den nya fonten

--- a/Rotfrukt_hemsida/site/public/info.html
+++ b/Rotfrukt_hemsida/site/public/info.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
     <title>Rotfrukter.nu</title>
 </head>
 <body>
@@ -69,7 +70,7 @@
 </div>
 
 <div class="text">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut sagittis metus. Etiam non aliquet neque, sit amet elementum risus. Fusce et magna venenatis, accumsan nibh in, suscipit ante. Etiam et lorem gravida, suscipit tellus sed, sodales diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum et mauris iaculis, faucibus neque a, tempor nisl.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut sagittis metus. Etiam non aliquet neque, sit amet elementum risus. Fusce et magna venenatis, accumsan nibh in, suscipit ante. Etiam et lorem gravida, suscipit tellus sed, sodales diam. Vestibulum ante ipsum primis in faucibus orci.</p>
 </div>
 
 <div class="bilder">
