Lade till så att den länken man är på är svart så att man ser vart man är

--- a/Rotfrukt_hemsida/site/public/recept.html
+++ b/Rotfrukt_hemsida/site/public/recept.html
@@ -60,7 +60,7 @@
         <a href="info.html">Info</a>
     </div>
 
-    <div class="recept">
+    <div class="recept_active">
         <a href="recept.html">Recept</a>
     </div>
 
