Lade till texten på "Odlingstips" delsidan

--- a/Rotfrukt_hemsida/site/public/odlingstips.html
+++ b/Rotfrukt_hemsida/site/public/odlingstips.html
@@ -67,6 +67,19 @@
     <div class="odlingstips_active">
         <a href="odlingstips.html">Tips</a>
     </div>
+</div>
+
+<div class="tips">
+    <div class="typ_av_jord">
+        <h3>Typ av jord</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut sagittis metus. Etiam non aliquet neque, sit amet elementum risus. Fusce et magna venenatis, accumsan nibh in, suscipit ante.</p>
+    </div>
+
+    <div class="bevattning">
+        <h3>Bevattning</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut sagittis metus. Etiam non aliquet neque, sit amet elementum risus. Fusce et magna venenatis, accumsan nibh in, suscipit ante.</p>
+    </div>
+
 </div>
 
         </main>
