--- a/Rotfrukt_hemsida/site/public/recept.html
+++ b/Rotfrukt_hemsida/site/public/recept.html
@@ -112,6 +112,17 @@
             <div class="morot2"></div>
         </div>
     </div>
+    <div class="recept6">
+        <h3>Potatisklyftor</h3>
+        <div class="morotter">
+            <div class="morot1"></div>
+            <div class="morot2"></div>
+            <div class="morot3"></div>
+            <div class="morot4"></div>
+            <div class="morot5"></div>
+        </div>
+    </div>
+
 </div>
 
         </main>
