Gjorde desktop versionen av info delsidan

--- a/Rotfrukt_hemsida/site/public/info.html
+++ b/Rotfrukt_hemsida/site/public/info.html
@@ -69,13 +69,18 @@
     </div>
 </div>
 
-<div class="text">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut sagittis metus. Etiam non aliquet neque, sit amet elementum risus. Fusce et magna venenatis, accumsan nibh in, suscipit ante. Etiam et lorem gravida, suscipit tellus sed, sodales diam. Vestibulum ante ipsum primis in faucibus orci.</p>
-</div>
+<div class="text_and_pics">
+    <div class="text">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut sagittis metus. Etiam non aliquet neque, sit amet elementum risus. Fusce et magna venenatis, accumsan nibh in, suscipit ante. Etiam et lorem gravida, suscipit tellus sed, sodales diam. Vestibulum ante ipsum primis in faucibus orci.</p>
+        <p2>Praesent nec elementum metus, eu elementum ipsum. Ut tristique non tortor at suscipit. Duis tincidunt neque at metus lobortis efficitur. Quisque sollicitudin nulla in nibh hendrerit scelerisque. Fusce laoreet massa pellentesque, gravida felis eu, fermentum tortor. Nunc feugiat massa at mi ultrices lobortis. In hac habitasse platea dictumst. Aliquam maximus imperdiet volutpat. Maecenas blandit ultricies vehicula. Duis lacinia aliquam enim porttitor volutpat. Sed quis venenatis neque, cursus porttitor turpis. Nam lacinia turpis et erat finibus, vel bibendum leo porttitor. Quisque dignissim hendrerit ipsum, euismod luctus libero pharetra nec. Donec tempor nec velit quis aliquam. Praesent dignissim bibendum pellentesque. In hac habitasse platea dictumst. Quisque tempor purus odio. Sed vestibulum dui ut facilisis elementum. Integer ut bibendum nisi, quis auctor mauris. In feugiat, lacus et venenatis commodo, turpis purus vulputate ex, vel eleifend mi neque sit amet lorem. Pellentesque dignissim magna nec sodales tempor. Vestibulum ut nulla dignissim, finibus nulla non, ultricies neque. Phasellus finibus accumsan ligula in ultricies. Pellentesque hendrerit, mauris id pellentesque luctus, velit diam faucibus mauris, ut ullamcorper nibh felis et ante. Fusce sollicitudin odio sed rutrum mattis. Maecenas urna lorem, vehicula in molestie in, feugiat at nulla. Nunc ultricies, lorem eget rhoncus tempus, nunc mi tincidunt mi, sed facilisis augue magna ut erat. Proin quis lobortis nunc, ac blandit est. Vivamus ligula odio, porttitor at blandit ut, placerat id lacus. Sed pretium vestibulum tellus, ac scelerisque purus scelerisque quis. Nam vitae pharetra sapien, a molestie ante. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque convallis lacus eros, in molestie velit rutrum vel. Nam ac diam et enim congue auctor. Quisque in euismod est. Cras at nisi eu est mollis hendrerit. Aliquam ullamcorper at elit vitae vehicula. Sed ut felis ipsum.
 
-<div class="bilder">
-    <div class="potatis"></div>
-    <div class="potatisplanta"></div>
+            Proin ac velit nec elit imperdiet tincidunt. Vivamus vehicula sollicitudin justo, et pellentesque neque vehicula quis.</p2>
+    </div>
+
+    <div class="bilder">
+        <div class="potatis"></div>
+        <div class="potatisplanta"></div>
+    </div>
 </div>
 
         </main>
