Gjorde desktop versionen av odlingstips delsidan

--- a/Rotfrukt_hemsida/site/public/odlingstips.html
+++ b/Rotfrukt_hemsida/site/public/odlingstips.html
@@ -73,11 +73,18 @@
     <div class="typ_av_jord">
         <h3>Typ av jord</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut sagittis metus. Etiam non aliquet neque, sit amet elementum risus. Fusce et magna venenatis, accumsan nibh in, suscipit ante.</p>
+        <p2>Praesent nec elementum metus, eu elementum ipsum. Ut tristique non tortor at suscipit. Duis tincidunt neque at metus lobortis efficitur. Quisque sollicitudin nulla in nibh hendrerit scelerisque. Fusce laoreet massa pellentesque, gravida felis eu, fermentum tortor.</p2>
     </div>
 
     <div class="bevattning">
         <h3>Bevattning</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut sagittis metus. Etiam non aliquet neque, sit amet elementum risus. Fusce et magna venenatis, accumsan nibh in, suscipit ante.</p>
+        <p2>Praesent nec elementum metus, eu elementum ipsum. Ut tristique non tortor at suscipit. Duis tincidunt neque at metus lobortis efficitur. Quisque sollicitudin nulla in nibh hendrerit scelerisque. Fusce laoreet massa pellentesque, gravida felis eu, fermentum tortor.</p2>
+    </div>
+
+    <div class="skydd_mot_insekter">
+        <h3>Skydd mot insekter</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut sagittis metus. Etiam non aliquet neque, sit amet elementum risus. Fusce et magna venenatis, accumsan nibh in, suscipit ante. Praesent nec elementum metus, eu elementum ipsum. Ut tristique non tortor at suscipit. Duis tincidunt neque at metus lobortis efficitur. Quisque sollicitudin nulla in nibh hendrerit scelerisque. Fusce laoreet massa pellentesque, gravida felis eu, fermentum tortor. Quisque dignissim hendrerit ipsum, euismod luctus libero pharetra nec. Donec tempor nec velit quis aliquam. Praesent dignissim bibendum pellentesque. In hac habitasse platea dictumst. Quisque tempor purus odio. Sed vestibulum dui ut facilisis elementum. Integer ut bibendum nisi, quis auctor mauris. In feugiat, lacus et venenatis commodo, turpis purus vulputate ex, vel eleifend mi neque sit amet lorem. Pellentesque dignissim magna nec sodales tempor.</p>
     </div>
 
 </div>
